fix: label size / alignment

--- a/blocks/explosion-slider/explosion-slider.css
+++ b/blocks/explosion-slider/explosion-slider.css
@@ -14,6 +14,7 @@
 
 .explosion-slider div {
     grid-area: 1 / 1 / 2 / 2;
+    text-align: left;
 }
 
 .explosion-slider div,
@@ -108,14 +109,20 @@
 
 .explosion-slider > div:nth-child(4) > div {
     display: inline-block;
+    width: 70%;
 }
 
 .explosion-slider > div:nth-child(5) > div {
     display: inline-block;
+    align-self: flex-end;
+    margin-bottom: 7px;
+    width: 72%;
+    text-align: right;
 }
 
 .explosion-slider > div:nth-child(6) > div {
-    margin-bottom: -13%;
+    width: 90%;
+    margin-bottom: -22%;
 }
 
 @media (min-width: 1400px) {
